2000-12-19  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_CHECK): Make exit status report more
	visible.
	* tests/atspecific.m4 (AT_CHECK_AUTOCONF): Support FLAGS, STDOUT
	and STDERR.
	(AT_CHECK_CONFIGURE): Support plenty, cleanup defs when needed.
	Spread their use in the whole suite.
	Simplify a few AT_CLEANUPs.

2000-12-19  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_CHECK): Accept if-failed and
	if-not-failed.
	* tests/atspecific.m4 (AT_CHECK_CONFIGURE): Use it in order to
	dump config.log when configure failed.  Before, the log was
	reported only on success.

2000-12-19  Akim Demaille  <akim@epita.fr>

	* tests/foreign.at: New file.

2000-12-19  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_BANNER, AT_CLEANUP): Formatting changes.

2000-12-18  Pavel Roskin  <proski@gnu.org>

	* Makefile.am: Add a comment explaining why suffix rules are not
	used there.

2000-12-15  Pavel Roskin  <proski@gnu.org>

	* autoconf.sh: If the "allowed" pattern is not defined set it
	to "^$".
	* tests/tools.at (autoconf: forbidden tokens, basic): New test.
	(autoconf: forbidden tokens): Renamed to ...
	(autoconf: forbidden tokens, exceptions): ... this.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_PROG_CXXCPP, AC_PROG_CPP): Require AC_PROG_CXX/CC.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* tests/compile.at (GNU Fortran 77): G77 is a `yes'/`' var.
	Reported by Ezra Peisach.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* tests/compile.at (GNU Fortran 77): s/g77/G77/.
	Reported by Ezra Peisach.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* man/Makefile.am (.x.1): Fix to work properly with
	builddir != srcdir.

2000-12-15  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_LANG(C), AC_LANG(C++), AC_LANG(Fortran 77))
	(AC_PROG_CPP, AC_PROG_CXXCPP, AC_PROG_GCC_TRADITIONAL)
	(_AC_PROG_CC_G, AC_PROG_CC_C_O, _AC_PROG_CXX_G, AC_PROG_CC_STDC):
	Don't use `${CC-cc}' since now the AC_REQUIRE machinery guarantees